# ChangeLog for x11-plugins/wmfortune
# Copyright 2000-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfortune/ChangeLog,v 1.13 2010/09/09 10:20:58 s4t4n Exp $

  09 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> wmfortune-0.241.ebuild:
  Honour Gentoo LDFLAGS. Closes bug #336446.

  16 Mar 2009; Michele Noberasco <s4t4n@gentoo.org> wmfortune-0.241.ebuild:
  Updated HOMEPAGE and SRC_URI. Closes bug #259606.

  25 Nov 2008; Tiago Cunha <tcunha@gentoo.org> wmfortune-0.241.ebuild:
  stable sparc, bug 215651

  15 Jan 2008; Samuli Suominen <drac@gentoo.org>
  +files/wmfortune-0.241-stringh.patch, wmfortune-0.241.ebuild:
  Fixed QA warnings due to a missing include string.h.

  22 Jul 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  wmfortune-0.241.ebuild:
  Drop virtual/x11 references.

  21 Feb 2007; Markus Ullmann <jokey@gentoo.org> ChangeLog:
  Redigest for Manifest2

  31 Jan 2006; Krzysiek Pawlik <nelchael@gentoo.org> wmfortune-0.241.ebuild:
  Fixed DEPEND for modular X.

  23 Nov 2004; Jason Wever <weeve@gentoo.org> wmfortune-0.241.ebuild:
  Added ~sparc keyword.

  08 Aug 2004; Tom Martin <slarti@gentoo.org> wmfortune-0.241.ebuild:
  Typo in DESCRIPTION: forune -> fortune. Bug 59717.

  22 Jul 2004; Michele Noberasco <s4t4n@gentoo.org> wmfortune-0.241.ebuild:
  Update HOMEPAGE and SRC_URI to the www.dockapps.org ones as the original
  give me a 404. Stable for x86.

  10 Sep 2003; Michael Sterrett <msterret@gentoo.org> wmfortune-0.241.ebuild:
  DEPEND on games-misc/fortune-mod (games reorg); also removed RDEPEND="" since
  I bet it actually needs fortune-mod to run, not just to build.

*wmfortune-0.241 (26 Jun 2003)

  26 Jun 2003; Mike Frysinger <vapier@gentoo.org> :
  Initial import.  Ebuild submitted by Susie Edgeworth <arienadean@yahoo.com> #18997.