@@ -1,6 +1,9 @@
 # ChangeLog for x11-plugins/wmfortune
-# Copyright 2000-2010 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfortune/ChangeLog,v 1.13 2010/09/09 10:20:58 s4t4n Exp $
+# Copyright 2000-2012 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-plugins/wmfortune/ChangeLog,v 1.14 2012/02/15 09:47:50 voyageur Exp $
+
+  15 Feb 2012; Bernard Cafarelli <voyageur@gentoo.org> wmfortune-0.241.ebuild:
+  Update HOMEPAGE and SRC_URI, thanks Lorenz in bug #394607
 
   09 Sep 2010; Michele Noberasco <s4t4n@gentoo.org> wmfortune-0.241.ebuild:
   Honour Gentoo LDFLAGS. Closes bug #336446.
